--- a/index.html
+++ b/index.html
@@ -184,6 +184,16 @@
                                     </a>
                                 </div>
                                 <div class="quicks">
+                                    <a href="https://md5jiami.bmcx.com/" target="_blank">
+                                        MD5加密
+                                    </a>
+                                </div>
+                                <div class="quicks">
+                                    <a href="https://www.sojson.com/" target="_blank">
+                                        JSON解析
+                                    </a>
+                                </div>
+                                <div class="quicks">
                                     <a href="https://www.superbed.cn/" target="_blank">
                                         聚合图床
                                     </a>
@@ -191,16 +201,6 @@
                                 <div class="quicks">
                                     <a href="https://translate.google.cn/" target="_blank">
                                         谷歌翻译
-                                    </a>
-                                </div>
-                                <div class="quicks">
-                                    <a href="https://app.yinxiang.com/" target="_blank">
-                                        印象笔记
-                                    </a>
-                                </div>
-                                <div class="quicks">
-                                    <a href="https://note.youdao.com/" target="_blank">
-                                        有道云笔记
                                     </a>
                                 </div>
                             </div>
@@ -268,9 +268,9 @@
                                         CodePen
                                     </a>
                                 </div>
-                                <div class="quicks">
+                                <div href="https://shields.io/" class="quicks">
                                     <a target="_blank">
-                                        空
+                                        数据徽章
                                     </a>
                                 </div>
                                 <div class="quicks">
@@ -429,13 +429,13 @@
                                     </a>
                                 </div>
                                 <div class="quicks">
-                                    <a target="_blank">
-                                        空
+                                    <a href="https://app.yinxiang.com/" target="_blank">
+                                        印象笔记
                                     </a>
                                 </div>
                                 <div class="quicks">
-                                    <a target="_blank">
-                                        空
+                                    <a href="https://note.youdao.com/" target="_blank">
+                                        有道云笔记
                                     </a>
                                 </div>
                                 <div class="quicks">
