--- a/index.html
+++ b/index.html
@@ -268,19 +268,19 @@
                                         CodePen
                                     </a>
                                 </div>
+                                <div class="quicks">
+                                    <a href="https://css-tricks.com/" target="_blank">
+                                        CSS 技巧
+                                    </a>
+                                </div>
+                                <div class="quicks">
+                                    <a href="https://www.javascript.fun/" target="_blank">
+                                        前端工坊
+                                    </a>
+                                </div>
                                 <div href="https://shields.io/" class="quicks">
                                     <a target="_blank">
                                         数据徽章
-                                    </a>
-                                </div>
-                                <div class="quicks">
-                                    <a target="_blank">
-                                        空
-                                    </a>
-                                </div>
-                                <div class="quicks">
-                                    <a target="_blank">
-                                        空
                                     </a>
                                 </div>
                             </div>
@@ -289,8 +289,18 @@
                         <div class="mainCont">
                             <div class="quick-alls">
                                 <div class="quicks">
+                                    <a href="https://dribbble.com/" target="_blank">
+                                        Dribbble
+                                    </a>
+                                </div>
+                                <div class="quicks">
                                     <a href="https://huaban.com/" target="_blank">
                                         花瓣网
+                                    </a>
+                                </div>
+                                <div class="quicks">
+                                    <a href="https://www.zcool.com.cn/" target="_blank">
+                                        站酷网
                                     </a>
                                 </div>
                                 <div class="quicks">
@@ -353,16 +363,6 @@
                                         字体资源库
                                     </a>
                                 </div>
-                                <div class="quicks">
-                                    <a target="_blank">
-                                        空
-                                    </a>
-                                </div>
-                                <div class="quicks">
-                                    <a target="_blank">
-                                        空
-                                    </a>
-                                </div>
                             </div>
                         </div>
                         <!-- 学习 -->
@@ -381,6 +381,11 @@
                                 <div class="quicks">
                                     <a href="https://open.163.com/" target="_blank">
                                         公开课
+                                    </a>
+                                </div>
+                                <div class="quicks">
+                                    <a href="https://www.imooc.com/" target="_blank">
+                                        慕课网
                                     </a>
                                 </div>
                                 <div class="quicks">
@@ -436,11 +441,6 @@
                                 <div class="quicks">
                                     <a href="https://note.youdao.com/" target="_blank">
                                         有道云笔记
-                                    </a>
-                                </div>
-                                <div class="quicks">
-                                    <a target="_blank">
-                                        空
                                     </a>
                                 </div>
                             </div>
