--- a/index.html
+++ b/index.html
@@ -730,14 +730,21 @@
                                                             <input type="radio" id="radio4" class="set-wallpaper"
                                                                 name="wallpaper-type" value="4" style="display: none;">
                                                             <label class="form-radio-label" for="radio4">
+                                                                mc酱
+                                                            </label>
+                                                        </div>
+                                                        <div class="form-radio">
+                                                            <input type="radio" id="radio5" class="set-wallpaper"
+                                                                name="wallpaper-type" value="5" style="display: none;">
+                                                            <label class="form-radio-label" for="radio5">
                                                                 二次元
                                                             </label>
                                                         </div>
                                                         <div class="form-radio mobile">
-                                                            <input type="radio" id="radio5"
+                                                            <input type="radio" id="radio6"
                                                                 class="set-wallpaper wallpaper-custom"
-                                                                name="wallpaper-type" value="5" style="display: none;">
-                                                            <label class="form-radio-label" for="radio5">
+                                                                name="wallpaper-type" value="6" style="display: none;">
+                                                            <label class="form-radio-label" for="radio6">
                                                                 自定义
                                                             </label>
                                                         </div>
