--- a/index.html
+++ b/index.html
@@ -793,7 +793,7 @@
             <div class="power">Copyright&nbsp;&copy;&nbsp;2020
                 <script>
                     document.write(' - ' + (new Date()).getFullYear())
-                </script>&nbsp;<a href="https://www.xukaiyyds.cn" target="_blank">主页</a>&nbsp;<a onclick='window.location.reload()'>刷新</a>
+                </script>&nbsp;<a href="https://www.xukaiyyds.cn">主页</a>&nbsp;<a onclick='window.location.reload()'>刷新</a>
             </div>
         </div>
     </section>
