--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>XKの自定义</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <meta name="description" content="凯伊兹的自定义导航,可自定义网址和背景图片,支持数据导入和导出" />
+    <meta name="description" content="凯心过的自定义导航,可自定义网址和背景图片,支持数据导入和导出" />
     <meta name="keywords" content="XK,自定义,XKの自定义,xukaiyyds.cn,nav.xukaiyyds.cn" />
     <meta name="author" content="XK,xukai" />
     <!-- logo -->
@@ -119,8 +119,28 @@
                         <div class="mainCont selected">
                             <div class="quick-all">
                                 <div class="quick">
-                                    <a href="https://www.xukaiyyds.cn/" target="_blank">
-                                        XKの主页
+                                    <a href="https://mail.qq.com/" target="_blank">
+                                        QQ邮箱
+                                    </a>
+                                </div>
+                                <div class="quick">
+                                    <a href="https://mail.163.com/" target="_blank">
+                                        163邮箱
+                                    </a>
+                                </div>
+                                <div class="quick">
+                                    <a href="https://mail.google.com/" target="_blank">
+                                        Gmail邮箱
+                                    </a>
+                                </div>
+                                <div class="quick">
+                                    <a href="https://app.yinxiang.com/" target="_blank">
+                                        印象笔记
+                                    </a>
+                                </div>
+                                <div class="quick">
+                                    <a href="https://note.youdao.com/" target="_blank">
+                                        有道云笔记
                                     </a>
                                 </div>
                             </div>
@@ -199,8 +219,8 @@
                                     </a>
                                 </div>
                                 <div class="quicks">
-                                    <a href="https://translate.google.cn/" target="_blank">
-                                        谷歌翻译
+                                    <a href="https://shields.io/" target="_blank">
+                                        数据徽章
                                     </a>
                                 </div>
                             </div>
@@ -244,6 +264,21 @@
                                     </a>
                                 </div>
                                 <div class="quicks">
+                                    <a href="https://cloud.tencent.com/" target="_blank">
+                                        腾讯云
+                                    </a>
+                                </div>
+                                <div class="quicks">
+                                    <a href="https://cn.aliyun.com/" target="_blank">
+                                        阿里云
+                                    </a>
+                                </div>
+                                <div class="quicks">
+                                    <a href="https://unicloud.dcloud.net.cn/" target="_blank">
+                                        存储云
+                                    </a>
+                                </div>
+                                <div class="quicks">
                                     <a href="https://vercel.com/" target="_blank">
                                         Vercel
                                     </a>
@@ -268,29 +303,14 @@
                                         CodePen
                                     </a>
                                 </div>
-                                <div class="quicks">
-                                    <a href="https://css-tricks.com/" target="_blank">
-                                        CSS 技巧
-                                    </a>
-                                </div>
-                                <div class="quicks">
-                                    <a href="https://www.javascript.fun/" target="_blank">
-                                        前端工坊
-                                    </a>
-                                </div>
-                                <div href="https://shields.io/" class="quicks">
-                                    <a target="_blank">
-                                        数据徽章
-                                    </a>
-                                </div>
                             </div>
                         </div>
                         <!-- 设计 -->
                         <div class="mainCont">
                             <div class="quick-alls">
                                 <div class="quicks">
-                                    <a href="https://dribbble.com/" target="_blank">
-                                        Dribbble
+                                    <a href="https://www.canva.cn/" target="_blank">
+                                        Canva可画
                                     </a>
                                 </div>
                                 <div class="quicks">
@@ -319,13 +339,13 @@
                                     </a>
                                 </div>
                                 <div class="quicks">
-                                    <a href="https://wallpaperhub.app/" target="_blank">
-                                        墙纸壁纸
+                                    <a href="https://tinypng.com/" target="_blank">
+                                        图片压缩
                                     </a>
                                 </div>
                                 <div class="quicks">
                                     <a href="https://backiee.com/" target="_blank">
-                                        壁纸墙纸
+                                        墙纸壁纸
                                     </a>
                                 </div>
                                 <div class="quicks">
@@ -429,18 +449,18 @@
                                     </a>
                                 </div>
                                 <div class="quicks">
+                                    <a href="https://fanyi.baidu.com/" target="_blank">
+                                        百度翻译
+                                    </a>
+                                </div>
+                                <div class="quicks">
                                     <a href="https://baike.baidu.com/" target="_blank">
                                         百度百科
                                     </a>
                                 </div>
                                 <div class="quicks">
-                                    <a href="https://app.yinxiang.com/" target="_blank">
-                                        印象笔记
-                                    </a>
-                                </div>
-                                <div class="quicks">
-                                    <a href="https://note.youdao.com/" target="_blank">
-                                        有道云笔记
+                                    <a href="https://simple.wikipedia.org/" target="_blank">
+                                        维基百科
                                     </a>
                                 </div>
                             </div>
