--- a/index.html
+++ b/index.html
@@ -36,17 +36,12 @@
 <body>
     <!-- 加载动画 -->
     <div id="loading-box">
-    <div class="loading-left-bg"></div>
-    <div class="loading-right-bg"></div>
-    <div class="spinner-box">
-    <div class="configure-border-1">
-    <div class="configure-core"></div>
-    </div>
-    <div class="configure-border-2">
-    <div class="configure-core"></div>
-    </div>
-    <div class="loading-word">请稍候...</div>
-    </div>
+        <div class="spinner-box">
+            <span class="loader"></span>
+            <div class="loading-word">
+                <p class="loading-title">LOADING</p>
+            </div>
+        </div>
     </div>
     <script>
     var endLoading = function () {
