--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                                     </a>
                                 </div>
                                 <div class="quicks">
-                                    <a href="https://weibomiaopai.com/" target="_blank">
+                                    <a href="https://bilibili.iiilab.com/" target="_blank">
                                         视频下载
                                     </a>
                                 </div>
@@ -214,8 +214,8 @@
                                     </a>
                                 </div>
                                 <div class="quicks">
-                                    <a href="https://shields.io/" target="_blank">
-                                        数据徽章
+                                    <a href="https://www.aliyundrive.com/" target="_blank">
+                                        阿里云盘
                                     </a>
                                 </div>
                             </div>
@@ -259,18 +259,18 @@
                                     </a>
                                 </div>
                                 <div class="quicks">
-                                    <a href="https://cloud.tencent.com/" target="_blank">
-                                        腾讯云
+                                    <a href="https://cn.vuejs.org/" target="_blank">
+                                        Vue
                                     </a>
                                 </div>
                                 <div class="quicks">
-                                    <a href="https://cn.aliyun.com/" target="_blank">
-                                        阿里云
+                                    <a href="https://react.docschina.org/" target="_blank">
+                                        React
                                     </a>
                                 </div>
                                 <div class="quicks">
-                                    <a href="https://unicloud.dcloud.net.cn/" target="_blank">
-                                        存储云
+                                    <a href="https://v5.bootcss.com/" target="_blank">
+                                        Bootstrap
                                     </a>
                                 </div>
                                 <div class="quicks">
