--- a/index.html
+++ b/index.html
@@ -113,27 +113,27 @@
                         <!-- 常用 -->
                         <div class="mainCont selected">
                             <div class="quick-all">
-                                <div class="quick">
+                                <div class="quick" data-s="QQ邮箱" title="">
                                     <a href="https://mail.qq.com/" target="_blank">
                                         QQ邮箱
                                     </a>
                                 </div>
-                                <div class="quick">
+                                <div class="quick" data-s="163邮箱" title="">
                                     <a href="https://mail.163.com/" target="_blank">
                                         163邮箱
                                     </a>
                                 </div>
-                                <div class="quick">
+                                <div class="quick" data-s="Gmail邮箱" title="">
                                     <a href="https://mail.google.com/" target="_blank">
                                         Gmail邮箱
                                     </a>
                                 </div>
-                                <div class="quick">
+                                <div class="quick" data-s="印象笔记" title="">
                                     <a href="https://app.yinxiang.com/" target="_blank">
                                         印象笔记
                                     </a>
                                 </div>
-                                <div class="quick">
+                                <div class="quick" data-s="有道云笔记" title="">
                                     <a href="https://note.youdao.com/" target="_blank">
                                         有道云笔记
                                     </a>
