--- a/index.html
+++ b/index.html
@@ -489,6 +489,11 @@
                                     </a>
                                 </div>
                                 <div class="quicks">
+                                    <a href="https://www.ghxi.com/" target="_blank">
+                                        果核剥壳
+                                    </a>
+                                </div>
+                                <div class="quicks">
                                     <a href="https://www.douban.com/" target="_blank">
                                         豆瓣
                                     </a>
@@ -514,6 +519,16 @@
                                     </a>
                                 </div>
                                 <div class="quicks">
+                                    <a href="https://www.huya.com/" target="_blank">
+                                        虎牙直播
+                                    </a>
+                                </div>
+                                <div class="quicks">
+                                    <a href="https://weibo.com/" target="_blank">
+                                        新浪微博
+                                    </a>
+                                </div>
+                                <div class="quicks">
                                     <a href="https://y.qq.com/" target="_blank">
                                         QQ音乐
                                     </a>
@@ -521,21 +536,6 @@
                                 <div class="quicks">
                                     <a href="https://music.163.com/" target="_blank">
                                         网易云音乐
-                                    </a>
-                                </div>
-                                <div class="quicks">
-                                    <a target="_blank">
-                                        空
-                                    </a>
-                                </div>
-                                <div class="quicks">
-                                    <a target="_blank">
-                                        空
-                                    </a>
-                                </div>
-                                <div class="quicks">
-                                    <a target="_blank">
-                                        空
                                     </a>
                                 </div>
                             </div>
