--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 <body>
     <!-- 加载动画 -->
     <div id="loading-box">
+        <div class="loading-left-bg"></div>
+        <div class="loading-right-bg"></div>
         <div class="spinner-box">
             <span class="loader"></span>
             <div class="loading-word">
